--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
         <title> Signup Page</title>
     </head>
     <body>
-        <a href="home.html"><img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" height="30px">
+        <a href="index.html"><img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" height="30px">
             HOME
                </a> &nbsp|&nbsp
                <a href="login.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLKPfCULqTgstNGAtJiMEYUF1OofxE5tJpUw&s" height="40px">
